#415 Added isCloseToPercentage to numbers